# ai201-project1-unofficial-guide-starter

./: .env.example  README.md  app.py  clean_docs.py  derby_pages.txt  embed_data.py  facebook.json  files_to_run_in_order.md  planning.md  print_chunks.py  prompt_me.py  pyproject.toml  reddit-SeattleWA-post-2026-06-09T02-52-41-489Z.json  reddit-seattlehousing-subreddit-2026-06-09T02-53-38-521Z.json  retrieve_data.py  retrieve_docs.py  seattle_listings.json
documents/apartments_com/: content.txt
documents/city_data/: content.txt
documents/craigslist/: content.txt
documents/derby_slu/: content.txt
documents/facebook/: content.txt
documents/reddit_housing/: content.txt
documents/reddit_pros_cons/: content.txt
documents/teamblind/: content.txt
documents/wikivoyage/: content.txt
documents/zillow/: content.txt
