[project]
name = "ai201-project1-unofficial-guide-starter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bs4>=0.0.2",
    "chromadb>=0.6.0",
    "groq==0.15.0",
    "playwright-stealth>=2.0.3",
    "praw>=7.8.2",
    "python-dotenv==1.0.1",
    "sentence-transformers==3.4.1",
]
